{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 15,
  "lineage": "f51e23cd-9f0a-e196-93da-a10801e3aa7a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07a261866e52b0adb",
            "public_dns": "ec2-52-48-114-37.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.48.114.37",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0891a7eb03f781d7d",
            "owner_id": "116969135843",
            "tags": {
              "Name": "terraform-project-vpc-igw"
            },
            "vpc_id": "vpc-0113ad3c4387cfcd2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a261866e52b0adb",
            "id": "nat-08c4800cd1470320f",
            "network_interface_id": "eni-04acb69cacdf1d031",
            "private_ip": "10.0.1.193",
            "public_ip": "52.48.114.37",
            "subnet_id": "subnet-05ec9b5441bae1d23",
            "tags": {
              "Name": "terraform-project-vpc-ngw"
            }
          },
          "depends_on": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-076f586e15fd800c2",
            "owner_id": "116969135843",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08c4800cd1470320f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-project-private-route-table"
            },
            "vpc_id": "vpc-0113ad3c4387cfcd2"
          },
          "depends_on": [
            "aws_nat_gateway.ngw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09ed136583515850e",
            "owner_id": "116969135843",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0891a7eb03f781d7d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-project-public-route-table"
            },
            "vpc_id": "vpc-0113ad3c4387cfcd2"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "to_private_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097e6c5a865b68b29",
            "route_table_id": "rtb-076f586e15fd800c2",
            "subnet_id": "subnet-012b3c54c74e2019c"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "to_private_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070d99f988dfd3514",
            "route_table_id": "rtb-076f586e15fd800c2",
            "subnet_id": "subnet-064f8a0e79fb35894"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "to_public_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0048016a9d38df372",
            "route_table_id": "rtb-09ed136583515850e",
            "subnet_id": "subnet-05ec9b5441bae1d23"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "to_public_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0cff6a266344dc4",
            "route_table_id": "rtb-09ed136583515850e",
            "subnet_id": "subnet-04c86e75f44b7396a"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116969135843:subnet/subnet-012b3c54c74e2019c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-012b3c54c74e2019c",
            "map_public_ip_on_launch": false,
            "owner_id": "116969135843",
            "tags": {
              "Name": "terraform-project-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0113ad3c4387cfcd2"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116969135843:subnet/subnet-064f8a0e79fb35894",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-064f8a0e79fb35894",
            "map_public_ip_on_launch": false,
            "owner_id": "116969135843",
            "tags": {
              "Name": "terraform-project-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-0113ad3c4387cfcd2"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116969135843:subnet/subnet-05ec9b5441bae1d23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05ec9b5441bae1d23",
            "map_public_ip_on_launch": true,
            "owner_id": "116969135843",
            "tags": {
              "Name": "terraform-project-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0113ad3c4387cfcd2"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116969135843:subnet/subnet-04c86e75f44b7396a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04c86e75f44b7396a",
            "map_public_ip_on_launch": true,
            "owner_id": "116969135843",
            "tags": {
              "Name": "terraform-project-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-0113ad3c4387cfcd2"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:116969135843:vpc/vpc-0113ad3c4387cfcd2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0850041117d68124f",
            "default_route_table_id": "rtb-05d2ef487d1cce08e",
            "default_security_group_id": "sg-03676b1ffc3457c53",
            "dhcp_options_id": "dopt-3800c25e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0113ad3c4387cfcd2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05d2ef487d1cce08e",
            "owner_id": "116969135843",
            "tags": {
              "Name": "terraform-project-vpc"
            }
          }
        }
      ]
    }
  ]
}